<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/app_Title"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            style="@style/textViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/nine"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/eight"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/seven"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/six"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RadioGroup>

        <TextView
            style="@style/textViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_two" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/leftie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/leftie"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/southpaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/southpaw"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/foul"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rightie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/rightie"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RadioGroup>

        <TextView
            style="@style/textViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_three" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/oneStrike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/oneStrike"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/threeStrikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/threeStrikes"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/twoStrikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/twoStrikes"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/fourStrikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/fourStrikes"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RadioGroup>

        <TextView
            style="@style/textViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_four" />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/baloo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/baloo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/bambi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/bambi"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/bambino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/bambino"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/blaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/blaster"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RadioGroup>

        <TextView
            style="@style/textViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_five" />

        <LinearLayout
            android:id="@+id/checkBoxGroup1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/grandSlam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/grandSlam"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/doublePlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/doublePlay"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/touchdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/touchdown"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/endZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/endZone"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            style="@style/textViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_six" />

        <EditText
            android:id="@+id/homeRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q5_hintText"
            android:inputType="text"

            />

        <Button
            android:id="@+id/scoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/calculateScore" />

    </LinearLayout>

</ScrollView>